k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hl7tool
  namespace: pre-production
  labels:
    app: hl7tool
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hl7tool
  template:
    metadata:
      labels:
        app: hl7tool
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: hl7tool
        matchLabelKeys:
          - pod-template-hash
      containers:
      - name: hl7tool
        image: 853450806095.dkr.ecr.us-east-2.amazonaws.com/saga-it/hl7tool:latest-dev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 6
          periodSeconds: 4
          timeoutSeconds: 3
          failureThreshold: 1
      # # Karpenter is for AWS only
      # #Deploy this app on the Karpenter nodes created by the default-lt provisioner
      # nodeSelector:
      #   type: "karpenter"
      #   provisioner: "default"
      # # tolerations:
      # #   - key: "default-lt"
      # #     operator: "Exists"
      # #     effect: "NoSchedule"
