k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hl7tool
  namespace: pre-production
spec:
  type: ClusterIP
  selector:
    app: hl7tool
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
