k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hl7-tool
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ip-address-type: ipv4
    alb.ingress.kubernetes.io/group.name: saga-site-prod-alb
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-2:853450806095:certificate/359db7fe-71fb-49c5-8fce-e094a58847c9"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/inbound-cidrs: 12.8.238.3/32, 76.108.211.199/32
    alb.ingress.kubernetes.io/group.order: '0'
spec:
  ingressClassName: alb
  tls:
    - hosts:
      - preprod.saga-dev2.com
  rules:
    - host: preprod.saga-dev2.com
      http:
        paths:
        - path: /hl7-online-parser
          pathType: Prefix
          backend:
            service:
              name: hl7tool
              port:
                number: 80
